--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,13 @@
+image:
+  file: .gitpod.Dockerfile
+  
 # List the start up tasks. Learn more: https://www.gitpod.io/docs/configure/workspaces/tasks
 tasks:
   - name: init tasks
     init: |
-      cd src && npm install -g pnpm 
+      npm install -g pnpm 
     command:  |
-      cd ~ && cd src && pnpm run make
+      cd src && pnpm run make
 
 # List the ports to expose. Learn more: https://www.gitpod.io/docs/configure/workspaces/ports
 ports:
